# UntitledTankGame

./: .gitignore  CMakeLists.txt  License.md  ReadMe.md  vcpkg.json
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  Configuration.cpp  Configuration.h
tests/: CMakeLists.txt  testConfiguration.cpp  tests.cpp
tests/Configuration/: Display.toml  GUI.toml
tests/data/: Display.toml  GUI.toml  Servers.toml
